src/bindings.rs

#[test]
fn bindgen_test_layout_st_LanSearchInfo2() {
    assert_eq!(
        ::std::mem::size_of::<st_LanSearchInfo2>(),
        170usize,
        concat!("Size of: ", stringify!(st_LanSearchInfo2))
    );
    assert_eq!(
        ::std::mem::align_of::<st_LanSearchInfo2>(),
        2usize,
        concat!("Alignment of ", stringify!(st_LanSearchInfo2))
    );
    fn test_field_UID() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<st_LanSearchInfo2>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).UID) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(st_LanSearchInfo2),
                "::",
                stringify!(UID)
            )
        );
    }
    test_field_UID();
    fn test_field_IP() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<st_LanSearchInfo2>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).IP) as usize - ptr as usize
            },
            21usize,
            concat!(
                "Offset of field: ",
                stringify!(st_LanSearchInfo2),
                "::",
                stringify!(IP)
            )
        );
    }
    test_field_IP();
    fn test_field_port() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<st_LanSearchInfo2>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).port) as usize - ptr as usize
            },
            38usize,
            concat!(
                "Offset of field: ",
                stringify!(st_LanSearchInfo2),
                "::",
                stringify!(port)
            )
        );
    }
    test_field_port();
    fn test_field_DeviceName() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<st_LanSearchInfo2>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).DeviceName) as usize - ptr as usize
            },
            40usize,
            concat!(
                "Offset of field: ",
                stringify!(st_LanSearchInfo2),
                "::",
                stringify!(DeviceName)
            )
        );
    }
    test_field_DeviceName();
    fn test_field_Reserved() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<st_LanSearchInfo2>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).Reserved) as usize - ptr as usize
            },
            169usize,
            concat!(
                "Offset of field: ",
                stringify!(st_LanSearchInfo2),
                "::",
                stringify!(Reserved)
            )
        );
    }
    test_field_Reserved();
}
#[doc = " \\details The prototype of getting login info function, used by a device"]
#[doc = "\t\t\tto be notified if it is still kept login with IOTC servers or is"]
#[doc = "\t\t\tdisconnected with IOTC servers."]
#[doc = ""]
#[doc = " \\param pnLoginInfo [out] The login info with meanings of following bits"]
#[doc = "\t\t\t- bit 0: the device is ready for connection by client from LAN if this bit is 1"]
#[doc = "\t\t\t- bit 1: the device is ready for connection by client from Internet if this bit is 1"]
#[doc = "\t\t\t- bit 2: if this bit is 1, it means the device has received login"]
#[doc = "\t\t\t\t\t\tresponse from IOTC servers since IOTC_Get_Login_Info()"]
#[doc = "\t\t\t\t\t\tis called last time."]
#[doc = ""]
pub type loginInfoCB =
    ::std::option::Option<unsafe extern "C" fn(nLoginInfo: ::std::os::raw::c_uint)>;
#[doc = " \\details The prototype of getting session status function, used by a device"]
#[doc = "\t\t\tor client to be notified if session is disconnected."]
#[doc = ""]
#[doc = " \\param nIOTCSessionID [out] The session ID of the session being disconnected"]
#[doc = " \\param nErrorCode [out]"]
#[doc = "\t\t\t- #IOTC_ER_SESSION_CLOSE_BY_REMOTE The IOTC session of specified"]
#[doc = "\t\t\t\tsession ID has been closed by remote site"]
#[doc = "\t\t\t- #IOTC_ER_REMOTE_TIMEOUT_DISCONNECT The timeout defined by #IOTC_SESSION_ALIVE_TIMEOUT"]
#[doc = "\t\t\t\texpires because\tremote site has no response"]
#[doc = ""]
pub type sessionStatusCB = ::std::option::Option<
    unsafe extern "C" fn(nIOTCSessionID: ::std::os::raw::c_int, nErrorCode: ::std::os::raw::c_int),
>;
extern "C" {
    #[doc = " \\brief Get the version of IOTC module"]
    #[doc = ""]
    #[doc = " \\details This function returns the version of IOTC module."]
    #[doc = ""]
    #[doc = " \\param pnVersion [out] The version of IOTC module. It contains"]
    #[doc = "\t\t\tthe version from high byte to low byte, for example, 0x01020304"]
    #[doc = "\t\t\tmeans the version is 1.2.3.4"]
    #[doc = ""]
    #[doc = " \\see RDT_GetRDTApiVer(), avGetAVApiVer()"]
    pub fn IOTC_Get_Version(pnVersion: *mut ::std::os::raw::c_uint);
}
extern "C" {
    #[doc = " \\brief Set the max number of IOTC sessions of IOTC module"]
    #[doc = ""]
    #[doc = " \\details This function set the max number of allowable IOTC sessions in IOTC"]
    #[doc = "\t\t\tmodule. The max number of IOTC session limits the max number of"]
    #[doc = "\t\t\tconnected clients in device side, while it limits the max number"]
    #[doc = "\t\t\tconnected devices in client\tside. A device or a client could use"]
    #[doc = "\t\t\tthis function to reduce the number of IOTC sessions in order to save"]
    #[doc = "\t\t\tsome memory usage."]
    #[doc = ""]
    #[doc = " \\param nMaxSessionNum [in] The max number of IOTC sessions"]
    #[doc = ""]
    #[doc = " \\attention\t(1) This function is optional if users do not want to change the"]
    #[doc = "\t\t\t\tdefault max number of IOTC sessions, i.e. MAX_DEFAULT_IOTC_SESSION_NUMBER."]
    #[doc = "\t\t\t\tHowever, if users really wants to change it, this function"]
    #[doc = "\t\t\t\tshall be called before IOTC platform is initialized.<br><br>"]
    #[doc = "\t\t\t\t(2) The maximum IOTC session number is platform dependent."]
    #[doc = "\t\t\t\tSee the definition of MAX_DEFAULT_IOTC_SESSION_NUMBER for each"]
    #[doc = "\t\t\t\tplatform."]
    pub fn IOTC_Set_Max_Session_Number(nMaxSessionNum: ::std::os::raw::c_uint);
}
extern "C" {
    #[doc = " \\brief Initialize IOTC module"]
    #[doc = ""]
    #[doc = " \\details This function is used by devices or clients to initialize IOTC"]
    #[doc = "\t\t\tmodule and shall be called before any IOTC module related"]
    #[doc = "\t\t\tfunction is invoked except for IOTC_Set_Max_Session_Number()."]
    #[doc = ""]
    #[doc = " \\param nUDPPort [in] Specify a UDP port. Random UDP port is used if it is specified as 0."]
    #[doc = " \\param cszP2PHostNamePrimary [in] Specify the host name or IP address of"]
    #[doc = "\t\t\tthe primary master. Cannot be NULL. See attention below for more detail."]
    #[doc = " \\param cszP2PHostNameSecondary [in] Specify the host name or IP address of"]
    #[doc = "\t\t\tthe secondary master. Cannot be NULL. See attention below for more detail."]
    #[doc = " \\param cszP2PHostNameThird [in] Specify the host name or IP address of"]
    #[doc = "\t\t\tthe third master. Can be NULL if only two masters are required."]
    #[doc = "\t\t\tSee attention below for more detail."]
    #[doc = " \\param cszP2PHostNameFourth [in] Specify the host name or IP address of"]
    #[doc = "\t\t\tthe fourth master. Can be NULL if only two masters are required."]
    #[doc = "\t\t\tSee attention below for more detail."]
    #[doc = ""]
    #[doc = " \\return #IOTC_ER_NoERROR if initializing successfully"]
    #[doc = " \\return Error code if return value < 0"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_RESOLVE_HOSTNAME Cannot resolve masters' host name"]
    #[doc = "\t\t\t- #IOTC_ER_ALREADY_INITIALIZED IOTC module is already initialized"]
    #[doc = "\t\t\t- #IOTC_ER_MASTER_TOO_FEW Two masters are required as parameters at minimum"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_MUTEX Fails to create Mutexs"]
    #[doc = "\t\t\t- #IOTC_ER_FAIL_CREATE_THREAD Fails to create threads"]
    #[doc = ""]
    #[doc = " \\see IOTC_Initialize2(), IOTC_DeInitialize()"]
    #[doc = ""]
    #[doc = " \\attention   (1) This function is the key entry to whole IOTC platform, including"]
    #[doc = "\t\t\t\tRDT module and AV module. That means, if you want tso use"]
    #[doc = "\t\t\t\tRDT module, users shall still use this function to initialize IOTC"]
    #[doc = "\t\t\t\tmodule before calling RDT_Initialize(). <br><br>"]
    #[doc = "\t\t\t\t(2) Usually, host name is suggested to be used to specify a master."]
    #[doc = "\t\t\t\tbecause that will ensure devices and clients can still connect"]
    #[doc = "\t\t\t\tto masters even the network address configuration of masters"]
    #[doc = "\t\t\t\tchanges in the future. However, in rare case, the host name"]
    #[doc = "\t\t\t\tof masters can not be resolved due to network issue and it is"]
    #[doc = "\t\t\t\tnecessary to specify IP address of masters in this function"]
    #[doc = "\t\t\t\tin order for successful connection. The host name and IP address"]
    #[doc = "\t\t\t\tof each master is listed as below:"]
    #[doc = "\t\t\t\t- Master #1: m1.iotcplatform.com => 50.19.254.134"]
    #[doc = "\t\t\t\t- Master #2: m2.iotcplatform.com => 122.248.234.207"]
    #[doc = "\t\t\t\t- Master #3: m3.iotcplatform.com => 46.137.188.54"]
    #[doc = "\t\t\t\t- Master #4: m4.iotcplatform.com => 122.226.84.253"]
    #[doc = "\t\t\t\t- Master #5: m5.iotcplatform.com => 61.188.37.216"]
    pub fn IOTC_Initialize(
        nUDPPort: ::std::os::raw::c_ushort,
        cszP2PHostNamePrimary: *const ::std::os::raw::c_char,
        cszP2PHostNameSecondary: *const ::std::os::raw::c_char,
        cszP2PHostNameThird: *const ::std::os::raw::c_char,
        cszP2PHostNameFourth: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
